# block-DDA

./: Basic_Stats.cpp  Basic_Stats.hpp  CMakeCache.txt  CMakeLists.txt  DDA_target_0_agg_N1024_kf1.0_Df2.8.out  DDA_target_0_agg_N128_kf1.0_Df2.8.out  DDA_target_0_agg_N16384_kf1.0_Df2.8.out  DDA_target_0_agg_N16_kf1.0_Df2.8.out  DDA_target_0_agg_N2048_kf1.0_Df2.8.out  DDA_target_0_agg_N256_kf1.0_Df2.8.out  DDA_target_0_agg_N32768_kf1.0_Df2.8.out  DDA_target_0_agg_N32_kf1.0_Df2.8.out  DDA_target_0_agg_N4096_kf1.0_Df2.8.out  DDA_target_0_agg_N512_kf1.0_Df2.8.out  DDA_target_0_agg_N64_kf1.0_Df2.8.out  DDA_target_0_agg_N65536_kf1.0_Df2.8.out  DDA_target_0_agg_N8192_kf1.0_Df2.8.out  DDA_target_0_agg_N8_kf1.0_Df2.8.out  DDA_target_2_agg_N1024_kf1.0_Df2.8.out  DDA_target_2_agg_N128_kf1.0_Df2.8.out  DDA_target_2_agg_N16384_kf1.0_Df2.8.out  DDA_target_2_agg_N16_kf1.0_Df2.8.out  DDA_target_2_agg_N2048_kf1.0_Df2.8.out  DDA_target_2_agg_N256_kf1.0_Df2.8.out  DDA_target_2_agg_N32_kf1.0_Df2.8.out  DDA_target_2_agg_N4096_kf1.0_Df2.8.out  DDA_target_2_agg_N512_kf1.0_Df2.8.out  DDA_target_2_agg_N64_kf1.0_Df2.8.out  DDA_target_2_agg_N8192_kf1.0_Df2.8.out  DDA_target_2_agg_N8_kf1.0_Df2.8.out  Incident_Wave.cpp  Incident_Wave.hpp  MBT_utils.hpp  Makefile  Material.cpp  Material.hpp  Material_Name.hpp  README.md  Result_manager.cpp  Result_manager.hpp  (+10 more)
bl_krylov_mvp_fft/: CMakeLists.txt  DDA_linear_solvers.hpp  MBT_utils.hpp  Makefile  bl_MBT_utils.hpp  bl_bicggr_jacobi_mvp_fft.cpp  bl_bicggr_mvp_fft.cpp  bl_bicggr_mvp_fft_old.cpp  bl_bicgstab_jacobi_mvp_fft.cpp  bl_bicgstab_mvp_fft.cpp  bl_bicgstab_mvp_fft_old.cpp  bl_cocg_rq_jacobi_mvp_fft.cpp  bl_cocg_rq_mvp_fft.cpp  bl_cocg_rq_mvp_fft_old.cpp  cmake_install.cmake  linear_algebra_addon.hpp  qr_reduced.cpp
gmie/: CMakeLists.txt  Makefile  cmake_install.cmake  gmie.cpp  gmie.hpp  gmie_coeff.cpp
module_tests/: fftwtest.cpp  omptest.cpp
module_tests/mvp_fft_tests/: eigen_fft_test.cpp  mvp_fft_example.cpp
mvp_fft/: BT_fft.cpp  BT_pad.cpp  BT_reconstruct.cpp  CMakeLists.txt  MBT_fft_init.cpp  MBT_fft_mvp.cpp  MBT_fft_mvp_old.cpp  Makefile  application_function.cpp  cmake_install.cmake
