cmake_minimum_required (VERSION 3.7.0)
set(CMAKE_CXX_COMPILER "g++-6")
set(CMAKE_CXX_FLAGS "-O3 -fopenmp -DNDEBUG -DEIGEN_NO_DEBUG -DEIGEN_FFTW_DEFAULT")
include_directories(/Users/moteki/eigen_3_2_10)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
link_libraries(fftw3)
link_libraries(fftw3_omp)
link_libraries(fftw3_threads)

add_library(bl_bicgstab_mvp_fft  bl_bicgstab_mvp_fft.cpp)
add_library(bl_bicgstab_jacobi_mvp_fft  bl_bicgstab_jacobi_mvp_fft.cpp)
add_library(bl_bicggr_mvp_fft  bl_bicggr_mvp_fft.cpp)
add_library(bl_bicggr_jacobi_mvp_fft  bl_bicggr_jacobi_mvp_fft.cpp)
add_library(bl_cocg_rq_mvp_fft  bl_cocg_rq_mvp_fft.cpp)
add_library(bl_cocg_rq_jacobi_mvp_fft  bl_cocg_rq_jacobi_mvp_fft.cpp)
add_library(qr_reduced qr_reduced.cpp)
